# lkdots

./: .gitignore  Cargo.toml  README.md  lkdots.toml  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/workflows/: CICD.yml
src/: cli.rs  config.rs  crypto.rs  gitignore.rs  main.rs  operations.rs  output.rs  path_util.rs  symlink.rs  symlink_util.rs
tests/: cli_encrypt_decrypt.rs
tests/test-data/: private.key
