cargo-features = ["strip"]

[package]
name = "lkdots"
version = "0.0.3"
edition = "2021"
authors = ["fengkx <liangkx8237@gmail.com>"]


[profile.release]
strip = "symbols"
opt-level = "s"
lto = true

[dependencies]
serde = { version = "1.0.130",  features = ["derive"] }
toml = "0.5"
symlink = "0.1.0"
permissions = "0.4.1"
structopt = "0.3"
lazy_static = "1.4.0"
rayon = "1.5.1"
shellexpand = "2.1"
anyhow = "1.0"
age = {version = "0.7.0", features = ["cli-common", "armor", "plugin"]}
pathdiff = "0.2"
log = "0.4"
env_logger = "0.8"
walkdir = "2"
rpassword = "5.0"
