[package]
name = "lkdots"
version = "0.0.6"
edition = "2024"
authors = ["fengkx <liangkx8237@gmail.com>"]


[profile.release]
strip = "symbols"
opt-level = "s"
lto = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.11.0"
shellexpand = "3.1.1"
anyhow = "1.0.100"
age = { version = "0.11.2", features = ["cli-common", "armor", "plugin"] }
pathdiff = "0.2.3"
log = "0.4.29"
env_logger = "0.11.8"
walkdir = "2.5.0"
rpassword = "7.4.0"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
indicatif = "0.18.3"
colored = "3.0.0"
subtle = "2.5"
